@@ -14,6 +14,9 @@ xymon (4.3.25) stable; urgency=high
    * Fix a crash in xymonnet when handling certain malformed SSL certificates
      (Reported by Thomas Leavitt, originally via Jeremy Laidman)
    * Add new trends_header and trends_footer for use on associated Trends pages
+   * "Jump to page" redirect functionality fixed on findhost.sh (Reported by Francois Claire)
+   * When a note is present for a host, the info page no longer has a spurious
+     hostname on the text link
 
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  Mon, XX Dec 2015 17:40:00 -0800
